# Inchman

./: analysis.html  editor.html  examples.html  genindex.html  hdf5.html  inchman.html  index.html  individual.html  installation.html  intro.html  objects.inv  sbml.html  search.html  searchindex.js  tutorial.html
_downloads/: ABAnnihilationDrift.xml  ABReaction.xml  Calcium.xml  FisherProblemIndividual.xml  HomogeneousDriftIndividual.xml  MultiplicativeNoise.xml  Oregonator.xml  RandomDrift.xml
_sources/: inchman.txt  individual.txt  installation.txt  intro.txt  sbml.txt
_static/: searchtools.js
doc/: .project  Makefile
doc/Tutorials/: Tutorials.html  Tutorials.html.bak  styles.css
doc/WebContent/: index.html  monash.html
doc/WebContent/src/: ie.scss  print.scss  screen.scss
doc/WebContent/stylesheets/: ie.css  print.css  screen.css
doc/examples/: ABReactionIndividual.xml  ABReactionIndividualNew.xml  FisherProblem.xml  HomogeneousDiffusion.xml  HomogeneousDrift.xml  HomogeneousDriftField.xml  Nonlinear.xml  OrnsteinUhlenbeck.xml  Slit.xml
doc/source/: analysis.rst  conf.py  editor.rst  examples.rst  hdf5.rst  index.rst  tutorial.rst
doc/source/images/: basic_inchman.dia  basic_inchman.dia~  inchman.xcf
editor/: .classpath  .project  README.txt
editor/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
editor/src/jigcell/sbml2/: AlgebraicRule.java  Annotations.java  AssignmentRule.java  Compartment.java  ConservationRelationFinder.java  Event.java  EventAssignment.java  FromObjectReference.java  FunctionDefinition.java  Instance.java  KineticLaw.java  LICENSE  Link.java  (+29 more)
editor/src/junit/: Makefile
editor/war/: ext-all-inchman.css  ext-all-inchman.scss  index.html
editor/war/WEB-INF/: appengine-web.xml  web.xml
exec/: CMakeLists.txt
exec/src/: CMakeLists.txt
exec/src/gpgmp/: CMakeLists.txt
exec/src/gpgmp/src/: Base.cpp  Base.h  Compartment.cpp  Compartment.h  DiffusionModel.cpp  DiffusionModel.h  Globals.h  HomogeneousSolver.cpp  HomogeneousSolver.h  IndividualSolver.cpp  IndividualSolver.h  InhomogeneousSolver.cpp  InhomogeneousSolver.h  Kernel.cpp  Kernel.h  Reaction.cpp  Reaction.h  Solver.cpp  Solver.h  Species.cpp  Species.h  Version.h  win_gettimeofday.cpp  win_gettimeofday.h
exec/src/gpgmp/src/cl_include/: helpers.cl
exec/src/inchman/: CMakeLists.txt  InchmanDiffusionModel.cpp  InchmanDiffusionModel.h  main.cpp
exec/src/tests/: AnnihilationProblem.cpp  AnnihilationProblem.h  CalciumModel.cpp  CalciumModel.h  DiffusionProblem.cpp  DiffusionProblem.h  FisherProblem.cpp  FisherProblem.h  GrayScottModel.cpp  GrayScottModel.h  IndividualReactionProblem.cpp  IndividualReactionProblem.h  LocalizedAnnihilationProblem.cpp  LocalizedAnnihilationProblem.h  MajorityFPEProblem.cpp  MajorityFPEProblem.h  MajorityVoteProblem.cpp  MajorityVoteProblem.h  MultiplicativeNoiseProblem.cpp  MultiplicativeNoiseProblem.h  NonlinearProblem.cpp  NonlinearProblem.h  OregonatorModel.cpp  OregonatorModel.h  OregonatorProblem.cpp.deprecated  OregonatorProblem.h.deprecated  OrnsteinUhlenbeckProblem.cpp  OrnsteinUhlenbeckProblem.h  RandomDriftProblem.cpp  RandomDriftProblem.h  ReactionProblem.cpp  ReactionProblem.h  SemiInfiniteSlabProblem.cpp  SemiInfiniteSlabProblem.h  SlitModel.cpp  SlitModel.h  alert.py  init_ca2p.py  init_ca2p_atri.py  init_fisher.py  (+6 more)
imagedev/: MacDmgBackground.psd  MacVolumeIcon.psd  WinOpen.psd  WinSave.psd  WinSimulate.psd  WinTrash.psd  body_bg.psd  body_bg_dark.psd  body_bg_light.psd  home_bg.psd  horiz_divider.psd  inchman512.psd  logo.psd  minus.psd  new.psd  open.psd  plus.psd  redo.psd  save.psd  sidepanel_bg.psd  simulate.psd  undo.psd
mac/: Deterministic.cl  Gillespie.cl  Inchman.icns  IndividualSolver.cl  StochasticHomogeneousDiffusion.cl  StochasticInhomogeneousDriftDiffusion.cl
mac/Inchman/: Inchman-Info.plist  Inchman-Prefix.pch  InchmanAppDelegate.h  InchmanAppDelegate.m  main.m  paramsweeper.py  protocolhandler.py
mac/Inchman.xcodeproj/: project.pbxproj
mac/Inchman/en.lproj/: MainMenu.xib
mac/InchmanDMG/: MacVolumeIcon.icns
python/: inchman  setup.py
python/fpkmc/: randomwalk.py
python/fpkmc/test/: random_drift.py  simpleab.py
python/fptkmc/models/: abannihilation.py
python/gpgmp/: constants.py  helpers.py  individuals.py  io.py
python/gpgmp/common/: jobs.py  options.py  options.py.in  pbs.py
python/gpgmp/inchman/: inchman_gui.py  paramsweeper.py
python/gpgmp/models/: calcium.py  gray_scott.py  majority.py  oregonator.py
python/gpgmp/test/: abreaction.py  annihilation_2d.py  annihilation_2d_drift.py  fisher_problem.py  homogeneous_diffusion.py  homogeneous_drift_diffusion.py  infinite_slab.py  localised_abreaction.py  multiplicative_noise.py  nonlinear.py  ornstein_uhlenbeck.py  random_drift.py  slit.py
python/scripts/: run_fptkmc_tests.py  run_gpgmp_models.py  run_rw_tests.py  run_tests.py  startup.py
windows/Gpgmp/: Gpgmp.vcxproj  Gpgmp.vcxproj.filters
windows/Inchman/: Inchman.sln  Inchman.vcxproj  Inchman.vcxproj.filters
windows/Inchman/Tests/: Tests.vcxproj  Tests.vcxproj.filters
(+105 files in other folders)
